--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.24.1",
     "apollo-server": "^2.25.1",
     "graphql": "^15.5.0"
   },
